[package]
name = "tcp2socks"
version = "0.1.1"
repository = "https://github.com/Idein/tcp2socks"
authors = ["Idein Inc. <contact@idein.jp>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["proxy", "socks"]
categories = ["network-programming"]
readme = "README.md"
description = "A proxy server converting TCP to SOCKS5"

[[bin]]
name = "tcp2socksd"
path = "src/main.rs"

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
color-eyre = "0.5.10"
derive_more = "0.99"
eyre = "0.6.5"
failure = "0.1.6"
libc = "0.2.60"
log = "0.4.6"
net2 = "0.2.32"
nix = "0.17.0"
pretty_env_logger = "0.3.0"
rand = "0.7.3"
regex = "1.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "0.4.0"
serde_yaml = "0.8.17"
signal-hook = "0.1.13"
socks = "0.3.3"
structopt = "0.2"
url = "2.2.1"

[dev-dependencies]
gatekeeper = "2.2.0"
tokio = { version = "1.3.0", features = ["rt", "rt-multi-thread", "net", "io-util"] }
